error in example

--- a/config/database.yml.example
+++ b/config/database.yml.example
@@ -18,8 +18,8 @@ development:
   encoding: unicode
   database: chat_development
   pool:     5
-  username: tutov
-  password: 30Coolwarez
+  username: 
+  password: 
 
   # Connect on a TCP socket. Omitted by default since the client uses a
   # domain socket that doesn't need configuration. Windows does not have
@@ -45,8 +45,8 @@ test:
   encoding: unicode
   database: chat_test
   pool:     5
-  username: tutov
-  password: 30Coolwarez
+  username: 
+  password: 
 
 production:
   adapter:  postgresql
@@ -54,5 +54,5 @@ production:
   encoding: unicode
   database: chat_production
   pool:     5
-  username: tutov
-  password: 30Coolwarez
+  username: 
+  password: 
