--- a/.travis.yml
+++ b/.travis.yml
@@ -2,12 +2,13 @@ language: ruby
 rvm:
   - "2.1.2"
 env:
-  - DB=postgresql
+  - DB=postgres
+before_script:
+  - cp config/database.travis.yml config/database.yml
+  - psql -c 'create database travis_ci_test;' -U postgres
 script:
   - RAILS_ENV=test bundle exec rake --trace db:migrate test
 addons:
   postgresql: "9.1.13"
   code_climate:
     repo_token: cc1a355c83e6a69ce263c41c4a7f0c405bb05dd1461efb2bfcfe155815f43d32
-before_script:
-  - psql -c 'create database travis_ci_test;' -U moroka
