--- a/.travis.yml
+++ b/.travis.yml
@@ -9,7 +9,7 @@ script:
   - bundle exec rake
 before_script:
   - cp config/database.travis.yml config/database.yml
-  - psql -c 'create database travis_ci_test' -U postgres
+#  - psql -c 'create database travis_ci_test' -U postgres
 addons:
   postgresql: "9.1"
   code_climate:
