--- a/.travis.yml
+++ b/.travis.yml
@@ -4,12 +4,9 @@ rvm:
 env:
   - DB=postgresql
 script:
-  - RAILS_ENV=test bundle exec rake db:migrate --trace
-  - bundle exec rake db:test:prepare
-  - bundle exec rake
+  - RAILS_ENV=test bundle exec rake --trace db:migrate test
 before_script:
-  - cp config/database.travis.yml config/database.yml
-#  - psql -c 'create database travis_ci_test' -U postgres
+  - psql -c 'create database chat_test' -U postgres
 addons:
   postgresql: "9.1"
   code_climate:
