--- a/.travis.yml
+++ b/.travis.yml
@@ -4,9 +4,13 @@ rvm:
 env:
   - DB=postgresql
 script:
-  - RAILS_ENV=test bundle exec rake --trace db:migrate test
+  - RAILS_ENV=test bundle exec rake db:migrate --trace
+  - bundle exec rake db:test:prepare
+  - bundle exec rake
 before_script:
-  - psql -c 'create database chat_test' -U postgres
+  - cp config/database.travis.yml config/database.yml
+  - psql -c "CREATE USER moroka WITH PASSWORD 'dmm_trued';" -U postgres
+  - psql -c 'create database travis_ci_test' -U moroka
 addons:
   postgresql: "9.1"
   code_climate:
