--- a/.travis.yml
+++ b/.travis.yml
@@ -9,7 +9,7 @@ script:
   - bundle exec rake
 before_script:
   - cp config/database.travis.yml config/database.yml
-  - psql -c "create user moroka WITH PASSWORD 'dmm_trued';" -U moroka
+  - psql -c "CREATE USER moroka WITH PASSWORD 'dmm_trued';"
   - psql -c 'create database travis_ci_test' -U moroka
 addons:
   postgresql: "9.1"
