--- a/.travis.yml
+++ b/.travis.yml
@@ -9,8 +9,8 @@ script:
   - bundle exec rake
 before_script:
   - cp config/database.travis.yml config/database.yml
-  - psql -c "CREATE USER moroka WITH PASSWORD 'dmm_trued';"
-  - psql -c 'CREATE DATABASE travis_ci_test' -U "moroka"
+  - psql -c "CREATE USER moroka WITH PASSWORD 'dmm_trued';" -U 'moroka'
+  - psql -c 'CREATE DATABASE travis_ci_test' -U 'moroka'
 addons:
   postgresql: "9.1"
   code_climate:
