--- a/.travis.yml
+++ b/.travis.yml
@@ -5,8 +5,8 @@ env:
   - DB=postgresql
 script:
 #  - RAILS_ENV=test bundle exec rake db:migrate --trace
-#  - bundle exec rake db:test:prepare
-#  - bundle exec rake
+  - bundle exec rake db:test:prepare
+  - bundle exec rake
   - RAILS_ENV=test bundle exec rake --trace db:migrate test
 before_script:
   - cp config/database.travis.yml config/database.yml
