--- a/.travis.yml
+++ b/.travis.yml
@@ -3,13 +3,10 @@ rvm:
   - "2.1.2"
 env:
   - DB=postgresql
-script:
-#  - RAILS_ENV=test bundle exec rake db:migrate --trace
-  - bundle exec rake db:test:prepare
-  - bundle exec rake
-  - RAILS_ENV=test bundle exec rake --trace db:migrate test
 before_script:
-  - cp config/database.travis.yml config/database.yml
+  – psql -c 'create database chat_test;' -U postgres
+script:
+  – RAILS_ENV=test bundle exec rake –trace db:migrate spec
 addons:
   postgresql: "9.1"
   code_climate:
