--- a/.travis.yml
+++ b/.travis.yml
@@ -4,9 +4,9 @@ rvm:
 env:
   - DB=postgresql
 before_script:
-  – psql -c 'create database chat_test;' -U postgres
+  – psql -c "create database webcalendar_test;" -U postgres
 script:
-  – RAILS_ENV=test bundle exec rake –trace db:migrate spec
+  – RAILS_ENV=test bundle exec rake -–trace db:migrate spec
 addons:
   postgresql: "9.1"
   code_climate:
