--- a/.travis.yml
+++ b/.travis.yml
@@ -6,8 +6,8 @@ env:
 script:
   - RAILS_ENV=test bundle exec rake --trace db:migrate test
 before_script:
-  - psql -c 'create user moroka with  password "dmm_trued"'
-  - psql -c 'create database chat_test' -U moroka
+  - psql -c 'CREATE ROLE moroka LOGIN'
+  - psql -c 'CREATE DATABASE chat_test' -U moroka
 addons:
   postgresql: "9.1"
   code_climate:
