--- a/.coveralls.yml
+++ b/.coveralls.yml
@@ -1,2 +1,2 @@
-service_name: travis-ci
-COVERALLS_REPO_TOKEN=OZI9HWNN8rXUJin9JuKhO2LyAHD4djRBl bundle exec rspec spec
+service_name: travis-pro
+repo_token: OZI9HWNN8rXUJin9JuKhO2LyAHD4djRBl
