--- a/.env
+++ b/.env
@@ -1,5 +1,8 @@
 DOTENV=true
 
+PUSHER_APP=75462
+PUSHER_KEY=5576ad6e6f0c44d04a98
+PUSHER_SECRET=2ffcc03e4843f41d6f79
 
 DOMAIN_NAME=mail.google.com
 GMAIL_USERNAME=chaaat.chaaat
