--- a/.travis.yml
+++ b/.travis.yml
@@ -3,7 +3,9 @@ rvm:
   - "2.1.2"
 env:
   - RAILS_ENV=TEST
-script: bundle exec coveralls push
+script:
+  - bundle exec rspec spec
+  - bundle exec coveralls push
 addons:
   postgresql: "9.1"
   code_climate:
