--- a/.travis.yml
+++ b/.travis.yml
@@ -5,6 +5,7 @@ env:
   - RAILS_ENV=TEST
 script:
   - bundle exec rake spec
+  - bundle exec coverall push
 addons:
   postgresql: "9.1"
   code_climate:
