Add build and coverage badges

--- a/.travis.yml
+++ b/.travis.yml
@@ -5,7 +5,7 @@ env:
   - RAILS_ENV=TEST
 script:
   - bundle exec rake spec
-  - bundle exec coverall push
+  - bundle exec coveralls push
 addons:
   postgresql: "9.1"
   code_climate:
