Add build and coverage badges

--- a/.travis.yml
+++ b/.travis.yml
@@ -4,7 +4,7 @@ rvm:
 env:
   - RAILS_ENV=TEST
 script:
-  - bundle exec rake spec
+  - bundle exec rspec spec
 addons:
   postgresql: "9.1"
   code_climate:
