--- a/.development.env
+++ b/.development.env
@@ -4,6 +4,12 @@ PUSHER_APP=75462
 PUSHER_KEY=5576ad6e6f0c44d04a98
 PUSHER_SECRET=2ffcc03e4843f41d6f79
 
+SLANGER_APP
+SLANGER_KEY
+SLANGER_SECRET
+SLANGER_HOST= '192.168.137.75'
+SLANGER_PORT= 4567
+
 DOMAIN_NAME=mail.google.com
 GMAIL_USERNAME=chaaat.chaaat
 GMAIL_PASSWORD=Natali1994
