--- a/.travis.yml
+++ b/.travis.yml
@@ -3,8 +3,7 @@ rvm:
   - "2.1.2"
 env:
   - RAILS_ENV=TEST
-script:
-  - bundle exec rake coveralls
+script: rspec spec
 addons:
   postgresql: "9.1"
   code_climate:
