--- a/.travis.yml
+++ b/.travis.yml
@@ -1,10 +1,11 @@
 language: ruby
 rvm:
   - "2.1.2"
+bundler_args: --without development production --quiet
 env:
   - RAILS_ENV=TEST
 script:
-  - bundle exec rake coveralls:push
+  - bundle exec rspec spec
 addons:
   postgresql: "9.1"
   code_climate:
