--- a/.travis.yml
+++ b/.travis.yml
@@ -5,7 +5,7 @@ bundler_args: --without development production --quiet
 env:
   - RAILS_ENV=TEST
 script:
-  - bundle exec rspec spec
+  - bundle exec rake coveralls push
 addons:
   postgresql: "9.1"
   code_climate:
