--- a/.travis.yml
+++ b/.travis.yml
@@ -1,11 +1,9 @@
 language: ruby
 rvm:
   - "2.1.2"
-bundler_args: --without development production --quiet
-env:
-  - RAILS_ENV=TEST
-script:
-  - bundle exec coveralls push
+#env:
+#  - RAILS_ENV=TEST
+script: "bundle exec rspec spec"
 addons:
   postgresql: "9.1"
   code_climate:
