--- a/.travis.yml
+++ b/.travis.yml
@@ -3,7 +3,7 @@ rvm:
   - "2.1.2"
 #env:
 #  - RAILS_ENV=TEST
-script: "bundle exec rspec spec"
+script: bundle exec rspec
 addons:
   postgresql: "9.1"
   code_climate:
