--- a/.travis.yml
+++ b/.travis.yml
@@ -1,9 +1,9 @@
 language: ruby
 rvm:
   - "2.1.2"
-#env:
-#  - RAILS_ENV=TEST
-script: bundle exec rspec
+env:
+  - RAILS_ENV=TEST
+script: bundle exec rake rspec
 addons:
   postgresql: "9.1"
   code_climate:
