--- a/.travis.yml
+++ b/.travis.yml
@@ -9,3 +9,5 @@ addons:
   postgresql: "9.1"
   code_climate:
     repo_token: cc1a355c83e6a69ce263c41c4a7f0c405bb05dd1461efb2bfcfe155815f43d32
+after_success:
+  - CI=true TRAVIS=true coveralls --verbose
