--- a/.travis.yml
+++ b/.travis.yml
@@ -2,11 +2,8 @@ language: ruby
 rvm:
   - "2.1.2"
 env:
-  - RAILS_ENV=TEST
-  - CODECLIMATE_REPO_TOKEN=cc1a355c83e6a69ce263c41c4a7f0c405bb05dd1461efb2bfcfe155815f43d32 bundle exec rake
+  - CODECLIMATE_REPO_TOKEN=cc1a355c83e6a69ce263c41c4a7f0c405bb05dd1461efb2bfcfe155815f43d32
 addons:
   postgresql: "9.1"
   code_climate:
     repo_token: cc1a355c83e6a69ce263c41c4a7f0c405bb05dd1461efb2bfcfe155815f43d32
-after_success:
-  - CI=true TRAVIS=true coveralls --verbose
