--- a/.travis.yml
+++ b/.travis.yml
@@ -4,7 +4,7 @@ rvm:
 env:
   - CODECLIMATE_REPO_TOKEN=cc1a355c83e6a69ce263c41c4a7f0c405bb05dd1461efb2bfcfe155815f43d32
 script:
-  - bundle exec rake spec
+  - bundle exec rake coveralls push
 addons:
   postgresql: "9.1"
   code_climate:
