--- a/.travis.yml
+++ b/.travis.yml
@@ -4,11 +4,10 @@ rvm:
 env:
   - CODECLIMATE_REPO_TOKEN=cc1a355c83e6a69ce263c41c4a7f0c405bb05dd1461efb2bfcfe155815f43d32
 script:
-  - bundle exec rake coveralls push
+  - bundle exec coveralls push
 addons:
   postgresql: "9.1"
   code_climate:
     repo_token: cc1a355c83e6a69ce263c41c4a7f0c405bb05dd1461efb2bfcfe155815f43d32
 after_success:
   - CI=true TRAVIS=true coveralls --verbose
-  
