--- a/.travis.yml
+++ b/.travis.yml
@@ -2,9 +2,10 @@ language: ruby
 rvm:
   - "2.1.2"
 env:
+  - RAILS_ENV=TEST
   - CODECLIMATE_REPO_TOKEN=cc1a355c83e6a69ce263c41c4a7f0c405bb05dd1461efb2bfcfe155815f43d32
 script:
-  - bundle exec coveralls push
+  - bundle exec rake spec
 addons:
   postgresql: "9.1"
   code_climate:
