--- a/.travis.yml
+++ b/.travis.yml
@@ -4,9 +4,9 @@ rvm:
 env:
   - RAILS_ENV=TEST
 script:
-  - CODECLIMATE_REPO_TOKEN=cc1a355c83e6a69ce263c41c4a7f0c405bb05dd1461efb2bfcfe155815f43d32
-  - COVERALLS_REPO_TOKEN=fvaF1YdUI6MaFapP9bakPNRBWUwSpIAR5
-  - bundle exec rake spec
+  - CODECLIMATE_REPO_TOKEN=cc1a355c83e6a69ce263c41c4a7f0c405bb05dd1461efb2bfcfe155815f43d32  bundle exec rake
+  - COVERALLS_REPO_TOKEN=fvaF1YdUI6MaFapP9bakPNRBWUwSpIAR5  bundle exec rake
+#  - bundle exec rake spec
 addons:
   postgresql: "9.1"
   code_climate:
