--- a/.travis.yml
+++ b/.travis.yml
@@ -1,23 +1,12 @@
-#language: ruby
-#rvm:
-#  - "2.1.2"
-#env:
-#  - RAILS_ENV=TEST
-#script:
-#  - CODECLIMATE_REPO_TOKEN=cc1a355c83e6a69ce263c41c4a7f0c405bb05dd1461efb2bfcfe155815f43d32
-#  - COVERALLS_REPO_TOKEN=fvaF1YdUI6MaFapP9bakPNRBWUwSpIAR5
-#  - bundle exec rake spec
-#addons:
-#  postgresql: "9.1"
-#  code_climate:
-#    repo_token: cc1a355c83e6a69ce263c41c4a7f0c405bb05dd1461efb2bfcfe155815f43d32
 language: ruby
 rvm:
   - "2.1.2"
 env:
   - RAILS_ENV=TEST
+  - CODECLIMATE_REPO_TOKEN=cc1a355c83e6a69ce263c41c4a7f0c405bb05dd1461efb2bfcfe155815f43d32
+  - COVERALLS_REPO_TOKEN=fvaF1YdUI6MaFapP9bakPNRBWUwSpIAR5
 script:
-  - CODECLIMATE_REPO_TOKEN=cc1a355c83e6a69ce263c41c4a7f0c405bb05dd1461efb2bfcfe155815f43d32 bundle exec rake
+  - bundle exec rake spec
 addons:
   postgresql: "9.1"
   code_climate:
