--- a/.travis.yml
+++ b/.travis.yml
@@ -3,9 +3,10 @@ rvm:
   - "2.1.2"
 env:
   - RAILS_ENV=TEST
+  - DB=postgres
 script:
   - CODECLIMATE_REPO_TOKEN=cc1a355c83e6a69ce263c41c4a7f0c405bb05dd1461efb2bfcfe155815f43d32
-  - bundle exec rake spec
+  - bundle exec rake rspec spec
 addons:
   postgresql: "9.1"
   code_climate:
