--- a/.coveralls.yml
+++ b/.coveralls.yml
@@ -1,2 +1,2 @@
-#service_name: travis-ci
-#repo_token: fvaF1YdUI6MaFapP9bakPNRBWUwSpIAR5
+service_name: travis-ci
+repo_token: fvaF1YdUI6MaFapP9bakPNRBWUwSpIAR5
