--- a/.travis.yml
+++ b/.travis.yml
@@ -1,11 +1,13 @@
 language: ruby
-script: "bundle exec rake spec"
 rvm:
   - "2.1.2"
 env:
-  - CODECLIMATE_REPO_TOKEN=cc1a355c83e6a69ce263c41c4a7f0c405bb05dd1461efb2bfcfe155815f43d32
-  - COVERALLS_REPO_TOKEN=fvaF1YdUI6MaFapP9bakPNRBWUwSpIAR5
+  - RAILS_ENV=TEST
+script:
+  - bundle exec rake spec
 addons:
   postgresql: "9.1"
   code_climate:
     repo_token: cc1a355c83e6a69ce263c41c4a7f0c405bb05dd1461efb2bfcfe155815f43d32
+  coveralls:
+    repo_token: fvaF1YdUI6MaFapP9bakPNRBWUwSpIAR5
