--- a/.travis.yml
+++ b/.travis.yml
@@ -1,12 +1,11 @@
 language: ruby
+script: "bundle exec rake spec"
 rvm:
   - "2.1.2"
 env:
-  - RAILS_ENV=TEST
-  - COVERALLS_REPO_TOKEN=fvaF1YdUI6MaFapP9bakPNRBWUwSpIAR5
   - CODECLIMATE_REPO_TOKEN=cc1a355c83e6a69ce263c41c4a7f0c405bb05dd1461efb2bfcfe155815f43d32
-script:
-  - bundle exec rake spec
+gemfile:
+  - Gemfile
 addons:
   postgresql: "9.1"
   code_climate:
