--- a/.travis.yml
+++ b/.travis.yml
@@ -3,6 +3,8 @@ script: "bundle exec rake spec"
 rvm:
   - "2.1.2"
 env:
+  - RAILS_EN=test
+   - DB=postgresql
   - CODECLIMATE_REPO_TOKEN=cc1a355c83e6a69ce263c41c4a7f0c405bb05dd1461efb2bfcfe155815f43d32
 gemfile:
   - Gemfile
