--- a/.travis.yml
+++ b/.travis.yml
@@ -1,15 +1,10 @@
 language: ruby
-before_script:
-  - psql -c 'create database chat_test;' -U postgres
-script: "bundle exec rake spec"
 rvm:
   - "2.1.2"
 env:
-  - RAILS_EN=test
-  - DB=postgresql
-  - CODECLIMATE_REPO_TOKEN=cc1a355c83e6a69ce263c41c4a7f0c405bb05dd1461efb2bfcfe155815f43d32
-gemfile:
-  - Gemfile
+  - RAILS_ENV=TEST
+script:
+  - bundle exec rake spec
 addons:
   postgresql: "9.1"
   code_climate:
