changed mailer to mandrill

--- a/.development.env
+++ b/.development.env
@@ -11,8 +11,8 @@ SLANGER_HOST= '192.168.137.75'
 SLANGER_PORT= 4567
 
 DOMAIN_NAME=mail.google.com
-GMAIL_USERNAME=chaaat.chaaat
-GMAIL_PASSWORD=Natali1994
+GMAIL_USERNAME=app24994288@heroku.com
+GMAIL_PASSWORD=k5vjuRYrFJkKMv_tDSCnvA
 HOSTNAME_SITE=http://ruby-chat-st.loc
 TITLE_SITE=Chaaat
 
