--- a/.travis.yml
+++ b/.travis.yml
@@ -4,7 +4,7 @@ rvm:
 env:
   - RAILS_ENV=TEST
 script:
-  - bundle exec rake :test_with_coveralls
+  - bundle exec rake test_with_coveralls
 gemfile:
   - Gemfile
 addons:
