--- a/.travis.yml
+++ b/.travis.yml
@@ -2,9 +2,9 @@ language: ruby
 rvm:
   - "2.1.2"
 env:
-  - RAILS_ENV=TEST
+  - RAILS_ENV=test
 script:
-  - COVERALLS_REPO_TOKEN=fvaF1YdUI6MaFapP9bakPNRBWUwSpIAR5 bundle exec rspec spec
+  - COVERALLS_REPO_TOKEN=fvaF1YdUI6MaFapP9bakPNRBWUwSpIAR5 bundle exec rake spec
 gemfile:
   - Gemfile
 addons:
