--- a/.travis.yml
+++ b/.travis.yml
@@ -4,7 +4,7 @@ rvm:
 env:
   - RAILS_ENV=test
 before_script:
-#  - cp config/database.travis.yml config/database.yml
+  - cp config/database.travis.yml config/database.yml
   - bundle exec rake db:create db:migrate db:schema:load
 script:
   - COVERALLS_REPO_TOKEN=fvaF1YdUI6MaFapP9bakPNRBWUwSpIAR5 bundle exec rake spec
