--- a/.travis.yml
+++ b/.travis.yml
@@ -2,9 +2,10 @@ language: ruby
 rvm:
   - "2.1.2"
 env:
+  -DB=postgres
   - RAILS_ENV=test
 before_script:
-  - cp config/database.travis.yml config/database.yml
+  - bundl exec rake config_db
   - bundle exec rake db:create db:migrate db:schema:load
 script:
   - COVERALLS_REPO_TOKEN=fvaF1YdUI6MaFapP9bakPNRBWUwSpIAR5 bundle exec rake spec
