--- a/.travis.yml
+++ b/.travis.yml
@@ -5,7 +5,7 @@ env:
   -DB=postgres
   - RAILS_ENV=test
 before_script:
-  - bundl exec rake config_db
+  - bundle exec rake config_db
   - bundle exec rake db:create db:migrate db:schema:load
 script:
   - COVERALLS_REPO_TOKEN=fvaF1YdUI6MaFapP9bakPNRBWUwSpIAR5 bundle exec rake spec
