--- a/config/database.yml
+++ b/config/database.yml
@@ -7,14 +7,19 @@ development:
   username: moroka
   password: dmm_trued
 
+#test:
+#  adapter: postgresql
+#  encoding: unicode
+#  database: chat_test
+#  pool: 5
+#  timeout: 5000
+#  username: moroka
+#  password: dmm_trued
+
 test:
   adapter: postgresql
-  encoding: unicode
-  database: chat_test
-  pool: 5
-  timeout: 5000
-  username: moroka
-  password: dmm_trued
+  database: travis_ci_test
+  username: postgres
 
 production:
   adapter:  postgresql
