--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,8 @@
 language: ruby
 rvm:
   - "2.1.2"
+before_script:
+  - psql -c "CREATE USER moroka WITH PASSWORD 'dmm_trued';" -U postgres
 script:
   - COVERALLS_REPO_TOKEN=fvaF1YdUI6MaFapP9bakPNRBWUwSpIAR5 bundle exec rake spec
 addons:
