--- a/.travis.yml
+++ b/.travis.yml
@@ -2,7 +2,7 @@ language: ruby
 rvm:
   - "2.1.2"
 before_script:
-  - RAILS_ENV=test bundle exec rake db:migrate --trace
+  - RAILS_ENV=test bundle exec rake db:create db:migrate --trace
   - bundle exec rake db:test:prepare
   - bundle exec rake
 script:
