fix hostname heroku

--- a/.development.env
+++ b/.development.env
@@ -13,7 +13,7 @@ SLANGER_PORT= 4567
 DOMAIN_NAME=mail.google.com
 GMAIL_USERNAME=app24994288@heroku.com
 GMAIL_PASSWORD=k5vjuRYrFJkKMv_tDSCnvA
-HOSTNAME_SITE=http://ruby-chat-st.loc
+HOSTNAME_SITE=http://chaaat.herokuapp.com
 TITLE_SITE=Chaaat
 
 
