fix errors room and message

--- a/.development.env
+++ b/.development.env
@@ -1,19 +1,10 @@
-DOTENV=true
-
-PUSHER_APP=75461
-PUSHER_KEY=ba68fc42ae63898c17b4
-PUSHER_SECRET=461e26812d021a073980
-
-SLANGER_APP
-SLANGER_KEY
-SLANGER_SECRET
-SLANGER_HOST= '192.168.137.75'
-SLANGER_PORT= 4567
-
+PUSHER_APP=68323
+PUSHER_KEY=255267aae6802ec7914f
+PUSHER_SECRET=456aa3a324e2b5e8a2f2
+PUSHER_HOST=192.168.137.75
+PUSHER_PORT=4567
 DOMAIN_NAME=mail.google.com
-GMAIL_USERNAME=app24994288@heroku.com
-GMAIL_PASSWORD=k5vjuRYrFJkKMv_tDSCnvA
-HOSTNAME_SITE=http://chaaat.herokuapp.com
+GMAIL_USERNAME=chaaat.chaaat
+GMAIL_PASSWORD=Natali1994
+HOSTNAME_SITE=http://ruby-chat-st.loc
 TITLE_SITE=Chaaat
-
-
